# Devsync-Test-

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  null  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai/services/: code_review.py
chat/: consumers.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  local.py  production.py
core/: views.py
devcord/: admin.py  ai_utils.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
devcord/migrations/: 0001_initial.py
devsync/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  local.txt  production.txt
static/css/: base.css  dashboard.css  main.css
static/js/: main.js
staticfiles/css/: project_detail.css  team_detail.css  teams.css
staticfiles/js/: base.js  dashboard.js  project_detail.js  team_detail.js
templates/: base.html
templates/devcord/: dashboard.html  profile.html  project_detail.html  settings.html  team_detail.html  team_form.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
templates/teams/: team_list.html
